Added a placeholder for Open Graph Protocol.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      prefix="og: http://ogp.me/ns#">
 <head>
+  <title>Baby Checklist</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Nataliya Pogodina">
   <meta name="description" content="Checklist of items to prepare for a newborn baby with specific product suggestions and tips on using them. Also can be used as a babyshower wish list.">
 
-  <title>Baby Checklist</title>
+<!--Open Graph Protocol - requires enabling upon deployment
+
+  <meta property="og:title" content="Baby Checklist" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://www.imdb.com/title/tt0117500/" />
+  <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+
+-->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/css/carousel.css">
