--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,8 +32,6 @@
   <meta name="msapplication-config" content="../static/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
@@ -79,7 +77,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-1.jpg" alt="Baby Evelynn">
+          <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-1.jpg">
 
           <div class="container">
             <div class="carousel-caption text-left">
@@ -90,7 +88,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-2.jpg" alt="Baby Evelynn">
+          <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-2.jpg">
 
           <div class="container">
             <div class="carousel-caption">
@@ -101,7 +99,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-3.jpg" alt="Baby Evelynn">
+          <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-3.jpg">
 
           <div class="container">
             <div class="carousel-caption text-right">
