Formated Cards header, changed h1 to be Baby Checklist.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -120,138 +120,138 @@
       </a>
     </div>
 
-
-    <div class="pricing-header px-3 py-3 pt-md-1 pb-md-3 mx-auto text-center">
-      <h1 class="featurette-heading anchor-offset-1"><span id="list-top" class="anchor-offset-2"></span><span id="itemMessage">Items To Get: </span><span id="itemNumber">0</span> / 42 <span class="lead">($<span id="item-price">0</span> / $1500 value)</span></h1>
-      <p class="lead">Click on links to jump to item descriptions. Сheck items you already own. Total value doesn't include optional items.</p>
-    </div>
-
-    <div class="container">
-      <div class="card-deck mb-2 babylist">
-        <div class="card card-pink mb-4 shadow-sm">
-          <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-light" style="color:#ffffff">Travel time</h4>
-          </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox" id="car-seat-checkbox"><span> </span><a href="#travel-system">Car Seat</a></div></li>
-              <li><div><input type="checkbox" id="stroller-checkbox"><span> </span><a href="#travel-system">Car Seat Carrier/Stroller</a></div></li>
-              <li><div><input type="checkbox" id="diaper-backpack-checkbox"><span> </span><a href="#diaper-backpack">Diaper backpack</a></div></li>
-              <li><div><input type="checkbox" id="blanket-checkbox"><span> </span><a href="#blanket">Blanket</a></div></li>
-              <li><div><input type="checkbox" id="car-shades-checkbox"><span> <span><a href="#car-shades"> <i>Optional: car shades, mirror</i></a></div></li>
-            </ul>
-
-            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/travel-time-icon.png" alt="Stroller Icon">
-
-            <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
-          </div>
-        </div>
-
-        <div class="card card-blue mb-4 shadow-sm">
-          <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-light" style="color:#ffffff">Baby fashion</h4>
-          </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox" class="onesies-checkbox"><span> </span><a href="#clothes">Onesies - size Newborn - x5</a></div></li>
-              <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Jumpsuits - size Newborn - x3</a></div></li>
-              <li><div><input type="checkbox" class="onesies-checkbox"><span> </span><a href="#clothes">Onesies - size 1 month - x5</a></div></li>
-              <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Jumpsuits - size 1 month - x3</a></div></li>
-              <li><div><input type="checkbox" class="winter-clothes"><span> </span><a href="#clothes"><i>Optional: jacket, hat, soft shoes</i></a></div></li>
-             </ul>
-             <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/fashion-time-icon.png" alt="Onesie Icon">
-            <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
-          </div>
-        </div>
-
-        <div class="card card-pink mb-4 shadow-sm">
-          <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-light" style="color:#ffffff">Bath time</h4>
-          </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox" id="bath-tub-checkbox"><span> </span><a href="#bath-tub">Infant bath tub</a></div></li>
-              <li><div><input type="checkbox" id="baby-wash-checkbox"><span> </span><a href="#baby-wash">Baby wash & shampoo</a></div></li>
-              <li><div><input type="checkbox" id="towel-checkbox"><span> </span><a href="#towel">Baby bath towel</a></div></li>
-              <li><div><input type="checkbox" id="washcloths-checkbox"><span> </span><a href="#washcloths">Baby wash clothes</a></div></li>
-              <li><div><input type="checkbox" id="rinser-checkbox"><span> </span><a href="#rinser">Rinser</a></div></li>
-            </ul>
-            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/bath-time-icon.png" alt="Rubber Duck Icon">
-            <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
-          </div>
-        </div>
-
+    <section>
+      <div class="pricing-header mb-4 text-center">
+        <h1 class="featurette-heading anchor-offset-1"><span id="list-top" class="anchor-offset-2"></span><span id="itemMessage">Baby Checklist: </span><span id="itemNumber">0</span> / 42 <span class="lead">($<span id="item-price">0</span> / $1500 value)</span></h1>
+        <p class="lead mb-0">Click on links to jump to item descriptions. Сheck items you already own. <span class="d-md-block">Total value doesn't include optional items.</span></p>
       </div>
-    </div>
 
-    <div class="container">
-      <div class="card-deck mb-3">
-        <div class="card card-blue mb-4 shadow-sm">
-          <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-light" style="color:#ffffff">Nap time</h4>
+      <div class="container">
+        <div class="card-deck mb-2 babylist">
+          <div class="card card-pink mb-4 shadow-sm">
+            <div class="card-header card-header-pink text-center">
+              <h4 class="my-0 font-weight-light" style="color:#ffffff">Travel time</h4>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled mt-2 mb-2">
+                <li><div><input type="checkbox" id="car-seat-checkbox"><span> </span><a href="#travel-system">Car Seat</a></div></li>
+                <li><div><input type="checkbox" id="stroller-checkbox"><span> </span><a href="#travel-system">Car Seat Carrier/Stroller</a></div></li>
+                <li><div><input type="checkbox" id="diaper-backpack-checkbox"><span> </span><a href="#diaper-backpack">Diaper backpack</a></div></li>
+                <li><div><input type="checkbox" id="blanket-checkbox"><span> </span><a href="#blanket">Blanket</a></div></li>
+                <li><div><input type="checkbox" id="car-shades-checkbox"><span> <span><a href="#car-shades"> <i>Optional: car shades, mirror</i></a></div></li>
+              </ul>
+
+              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/travel-time-icon.png" alt="Stroller Icon">
+
+              <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+            </div>
           </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox" id="crib-checkbox"><span> </span><a href="#crib">Crib</a></div></li>
-              <li><div><input type="checkbox"> Crib mattress</div></li>
-              <li><div><input type="checkbox"> Waterproof crib pads x2</div></li>
-              <li><div><input type="checkbox"> Crib sheets</div></li>
-              <li><div><input type="checkbox"> Swaddle blanket</div></li>
-              <li><div><input type="checkbox"> Sleep sack</div></li>
-              <li><div><input type="checkbox"> Pacifier x2</div></li>
-              <li><div><input type="checkbox"> Bouncer or swing</div></li>
-              <li><div><input type="checkbox"><span> </span><a href="#bassinet"> <i>Optional: bassinet</i></a></div></li>
-            </ul>
-            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/bed-time-icon.png" alt="Crib Icon">
-            <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+
+          <div class="card card-blue mb-4 shadow-sm">
+            <div class="card-header card-header-blue text-center">
+              <h4 class="my-0 font-weight-light" style="color:#ffffff">Baby fashion</h4>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled mt-2 mb-2">
+                <li><div><input type="checkbox" class="onesies-checkbox"><span> </span><a href="#clothes">Onesies - size Newborn - x5</a></div></li>
+                <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Jumpsuits - size Newborn - x3</a></div></li>
+                <li><div><input type="checkbox" class="onesies-checkbox"><span> </span><a href="#clothes">Onesies - size 1 month - x5</a></div></li>
+                <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Jumpsuits - size 1 month - x3</a></div></li>
+                <li><div><input type="checkbox" class="winter-clothes"><span> </span><a href="#clothes"><i>Optional: jacket, hat, soft shoes</i></a></div></li>
+               </ul>
+               <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/fashion-time-icon.png" alt="Onesie Icon">
+              <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+            </div>
           </div>
+
+          <div class="card card-pink mb-4 shadow-sm">
+            <div class="card-header card-header-pink text-center">
+              <h4 class="my-0 font-weight-light" style="color:#ffffff">Bath time</h4>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled mt-2 mb-2">
+                <li><div><input type="checkbox" id="bath-tub-checkbox"><span> </span><a href="#bath-tub">Infant bath tub</a></div></li>
+                <li><div><input type="checkbox" id="baby-wash-checkbox"><span> </span><a href="#baby-wash">Baby wash & shampoo</a></div></li>
+                <li><div><input type="checkbox" id="towel-checkbox"><span> </span><a href="#towel">Baby bath towel</a></div></li>
+                <li><div><input type="checkbox" id="washcloths-checkbox"><span> </span><a href="#washcloths">Baby wash clothes</a></div></li>
+                <li><div><input type="checkbox" id="rinser-checkbox"><span> </span><a href="#rinser">Rinser</a></div></li>
+              </ul>
+              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/bath-time-icon.png" alt="Rubber Duck Icon">
+              <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+            </div>
+          </div>
+
         </div>
-
-        <div class="card card-pink mb-4 shadow-sm">
-          <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-light" style="color:#ffffff">Lunch time</h4>
-          </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Breast pump</div></li>
-              <li><div><input type="checkbox"> Set of extra bottles</div></li>
-              <li><div><input type="checkbox"> Bottles with preemie nipples x6</div></li>
-              <li><div><input type="checkbox"> Formula</div></li>
-              <li><div><input type="checkbox"> Sterilizer</div></li>
-              <li><div><input type="checkbox"> Baby bottle brush</div></li>
-              <li><div><input type="checkbox"> Dishwasher basket</div></li>
-              <li><div><input type="checkbox"> Burp clothes/receiving blankets</div></li>
-              <li><div><input type="checkbox"> Nipple cream</div></li>
-            </ul>
-            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/lunch-time-icon.png" alt="Bottle Icon">
-            <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
-          </div>
-        </div>
-
-        <div class="card card-blue mb-4 shadow-sm">
-          <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-light" style="color:#ffffff">Refresh time</h4>
-          </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Changing pad</div></li>
-              <li><div><input type="checkbox"> Changing pad cover</div></li>
-              <li><div><input type="checkbox"> Waterproof pads</div></li>
-              <li><div><input type="checkbox"> Diapers - size Newborn</div></li>
-              <li><div><input type="checkbox"> Diapers - size 1</div></li>
-              <li><div><input type="checkbox"> Baby wipes</div></li>
-              <li><div><input type="checkbox"> <i> Optional: wipe holder</i></div></li>
-              <li><div><input type="checkbox"> Diaper rush ointment</div></li>
-              <li><div><input type="checkbox"> Diaper pail</div></li>
-            </ul>
-            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/refresh-time-icon.png" alt="Diaper Icon">
-            <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
-          </div>
-        </div>
-
       </div>
-    </div>
 
+      <div class="container">
+        <div class="card-deck mb-3">
+          <div class="card card-blue mb-4 shadow-sm">
+            <div class="card-header card-header-blue text-center">
+              <h4 class="my-0 font-weight-light" style="color:#ffffff">Nap time</h4>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled mt-2 mb-2">
+                <li><div><input type="checkbox" id="crib-checkbox"><span> </span><a href="#crib">Crib</a></div></li>
+                <li><div><input type="checkbox"> Crib mattress</div></li>
+                <li><div><input type="checkbox"> Waterproof crib pads x2</div></li>
+                <li><div><input type="checkbox"> Crib sheets</div></li>
+                <li><div><input type="checkbox"> Swaddle blanket</div></li>
+                <li><div><input type="checkbox"> Sleep sack</div></li>
+                <li><div><input type="checkbox"> Pacifier x2</div></li>
+                <li><div><input type="checkbox"> Bouncer or swing</div></li>
+                <li><div><input type="checkbox"><span> </span><a href="#bassinet"> <i>Optional: bassinet</i></a></div></li>
+              </ul>
+              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/bed-time-icon.png" alt="Crib Icon">
+              <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+            </div>
+          </div>
+
+          <div class="card card-pink mb-4 shadow-sm">
+            <div class="card-header card-header-pink text-center">
+              <h4 class="my-0 font-weight-light" style="color:#ffffff">Lunch time</h4>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled mt-2 mb-2">
+                <li><div><input type="checkbox"> Breast pump</div></li>
+                <li><div><input type="checkbox"> Set of extra bottles</div></li>
+                <li><div><input type="checkbox"> Bottles with preemie nipples x6</div></li>
+                <li><div><input type="checkbox"> Formula</div></li>
+                <li><div><input type="checkbox"> Sterilizer</div></li>
+                <li><div><input type="checkbox"> Baby bottle brush</div></li>
+                <li><div><input type="checkbox"> Dishwasher basket</div></li>
+                <li><div><input type="checkbox"> Burp clothes/receiving blankets</div></li>
+                <li><div><input type="checkbox"> Nipple cream</div></li>
+              </ul>
+              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/lunch-time-icon.png" alt="Bottle Icon">
+              <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+            </div>
+          </div>
+
+          <div class="card card-blue mb-4 shadow-sm">
+            <div class="card-header card-header-blue text-center">
+              <h4 class="my-0 font-weight-light" style="color:#ffffff">Refresh time</h4>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled mt-2 mb-2">
+                <li><div><input type="checkbox"> Changing pad</div></li>
+                <li><div><input type="checkbox"> Changing pad cover</div></li>
+                <li><div><input type="checkbox"> Waterproof pads</div></li>
+                <li><div><input type="checkbox"> Diapers - size Newborn</div></li>
+                <li><div><input type="checkbox"> Diapers - size 1</div></li>
+                <li><div><input type="checkbox"> Baby wipes</div></li>
+                <li><div><input type="checkbox"> <i> Optional: wipe holder</i></div></li>
+                <li><div><input type="checkbox"> Diaper rush ointment</div></li>
+                <li><div><input type="checkbox"> Diaper pail</div></li>
+              </ul>
+              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/refresh-time-icon.png" alt="Diaper Icon">
+              <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
